# RAG_with_RAGAS

./: Metrics.txt  README.md  pyproject.toml  requirements.txt
Core_Concepts/Ragas_Metrics/: General_Purpose.ipynb  NL_Comparision.ipynb  agentic_or_tool_metrics.ipynb  nvidia_metrics.ipynb  rag_metrics.ipynb  sql_metrics.ipynb
Core_Concepts/components/: prompt_objs.ipynb
Core_Concepts/eval/: eval_dataset.ipynb  eval_samples.ipynb
Testset_Generation/: RAG_Dataset.ipynb
examples/: evaluating_simple_rag.ipynb  intro.ipynb  testset_generation_rag.ipynb
rag_pipeline/: pipe.py
