[project]
name = "complete-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "langchain-groq>=0.3.6",
    "langchain-ollama>=0.3.4",
    "libmagic>=1.0",
    "ragas>=0.2.15",
    "sacrebleu>=2.5.1",
    "unstructured[md]>=0.18.5",
]
